--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <hr>
     <body>
         <h2>SUMMARY</h2>
-        <p>I am 19 year old woman who is a student learning different things, most important - learing life. </p>
+        <p>I am 19 year old woman who is a student learning different things, most important - learning life. </p>
         <hr/>
         <h2>EDUCATION</h2>
         <ol>
